page layout bug fix

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -27,8 +27,60 @@ Grey dark 3: #999
 // The Css Vars have to be  defined inside a scope/declaration block. eg in the 'root' pseudo class. This is like the html selector but with a higher specificity & is a parent to all other classes & elements.
 // Use 2 -- dashes before the name of the custom property/css var.
 
+// :root {
+//     // - COLORS
+//     --color-primary: #eb2f64;
+//     --color-primary-light: #FF3366;
+//     --color-primary-dark: #BA265D;
+
+//     --color-grey-light-1: #faf9f9;
+//     --color-grey-light-2: #f4f2f2;
+//     --color-grey-light-3: #f0eeee;
+//     --color-grey-light-4: #ccc;
+
+//     --color-grey-dark-1: #333;
+//     --color-grey-dark-2: #777;
+//     --color-grey-dark-3: #999;
+
+//     // -BOX-SHADOW
+//     --shadow-dark:  0 2rem 6rem rgba(0,0,0,.3);
+//     --shadow-light: 0 2rem 5rem rgba(0, 0, 0, .06);
+
+//     --line: 1px solid var(--color-grey-light-2);
+// }
+
+// /* ------ GLOBAL RE-SET SET-UP ------ */
+// * {
+//     margin: 0;
+//     padding: 0;
+// }
+
+// *,
+// *::before,
+// *::after {
+//     box-sizing: inherit;
+// }
+
+// html {
+//     box-sizing: border-box;
+//     font-size: 62.5%; // 1rem = 10px, (10px/16px = 62.52%)- 16px is the default browser font-size setting.
+// }
+
+// body {
+//     font-family: 'Open Sans', sans-serif;
+//     font-weight: 400;
+//     line-height: 1.6;
+//     color: var(--color-grey-dark-2);
+//     background-image: linear-gradient(to right bottom,
+//         var(--color-primary-light),
+//         var(--color-primary-dark));
+//     background-size: cover;
+//     background-repeat: no-repeat;
+
+//     min-height: 100vh;
+// }
+
 :root {
-    // - COLORS
     --color-primary: #eb2f64;
     --color-primary-light: #FF3366;
     --color-primary-dark: #BA265D;
@@ -42,15 +94,18 @@ Grey dark 3: #999
     --color-grey-dark-2: #777;
     --color-grey-dark-3: #999;
 
-    // -BOX-SHADOW
-    --shadow-dark:  0 2rem 6rem rgba(0,0,0,.3);
-    --shadow-light: 0 2rem 5rem rgba(0, 0, 0, .06);
-
+    --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
+    --shadow-light: 0 2rem 5rem rgba(0,0,0,.06);
 
     --line: 1px solid var(--color-grey-light-2);
 }
 
-/* ------ GLOBAL RE-SET SET-UP ------ */
+$bp-largest: 75em;     // 1200px
+$bp-large: 68.75em;    // 1100px
+$bp-medium: 56.25em;   // 900px
+$bp-small: 37.5em;     // 600px
+$bp-smallest: 31.25em; // 500px
+
 * {
     margin: 0;
     padding: 0;
@@ -64,7 +119,11 @@ Grey dark 3: #999
 
 html {
     box-sizing: border-box;
-    font-size: 62.5%; // 1rem = 10px, (10px/16px = 62.52%)- 16px is the default browser font-size setting.
+    font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
+
+    @media only screen and (max-width: $bp-large) {
+        font-size: 50%;
+    }
 }
 
 body {
@@ -72,9 +131,7 @@ body {
     font-weight: 400;
     line-height: 1.6;
     color: var(--color-grey-dark-2);
-    background-image: linear-gradient(to right bottom,
-        var(--color-primary-light),
-        var(--color-primary-dark));
+    background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
     background-size: cover;
     background-repeat: no-repeat;
 
